// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test change dataSource 1`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <label class="root" show-title="true" tabindex="0">
            <span class="box" status="null"></span>
            <span vusion-slot-name="item"></span>
          </label>
          <span vusion-slot-name="item">节点 1</span>
        </div>
      </div>
      <div class="sub">
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" show-title="true" tabindex="0">
                <span class="box" status="false"></span>
                <span vusion-slot-name="item"></span>
              </label>
              <span vusion-slot-name="item">节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" show-title="true" tabindex="0">
                <span class="box" status="false"></span>
                <span vusion-slot-name="item"></span>
              </label>
              <span vusion-slot-name="item">节点 1.2</span>
            </div>
          </div>
          <div class="sub">
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <label class="root" show-title="true" tabindex="0">
                    <span class="box" status="false"></span>
                    <span vusion-slot-name="item"></span>
                  </label>
                  <span vusion-slot-name="item">节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <label class="root" show-title="true" tabindex="0">
                    <span class="box" status="false"></span>
                    <span vusion-slot-name="item"></span>
                  </label>
                  <span vusion-slot-name="item">节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" show-title="true" tabindex="0">
                <span class="box" status="true"></span>
                <span vusion-slot-name="item"></span>
              </label>
              <span vusion-slot-name="item">节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" show-title="true" tabindex="0">
                <span class="box" status="true"></span>
                <span vusion-slot-name="item"></span>
              </label>
              <span vusion-slot-name="item">节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <label class="root" show-title="true" tabindex="0">
            <span class="box" status="false"></span>
            <span vusion-slot-name="item"></span>
          </label>
          <span vusion-slot-name="item">节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <label class="root" show-title="true" tabindex="0">
            <span class="box" status="false"></span>
            <span vusion-slot-name="item"></span>
          </label>
          <span vusion-slot-name="item">节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
  </div>
</div>
`;

exports[`test change dataSource 2`] = `
<div>
  <div class="root">
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
        <div class="text" draggable="false" style="margin-left: 30px;">
          <label class="root" show-title="true" tabindex="0">
            <span class="box" status="true"></span>
            <span vusion-slot-name="item"></span>
          </label>
          <span vusion-slot-name="item">节点 1</span>
        </div>
      </div>
      <div class="sub">
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" disabled="disabled" show-title="true" tabindex="0">
                <span class="box" disabled="disabled" status="false"></span>
                <span vusion-slot-name="item"></span>
              </label>
              <span vusion-slot-name="item">节点 1.1</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" disabled="disabled" style="padding-left: 30px;" tabindex>
            <div class="expander" expand-trigger="click" expanded="true" style="width: 30px;"></div>
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" disabled="disabled" show-title="true" tabindex="0">
                <span class="box" disabled="disabled" status="false"></span>
                <span vusion-slot-name="item"></span>
              </label>
              <span vusion-slot-name="item">节点 1.2</span>
            </div>
          </div>
          <div class="sub">
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <label class="root" disabled="disabled" show-title="true" tabindex="0">
                    <span class="box" disabled="disabled" status="false"></span>
                    <span vusion-slot-name="item"></span>
                  </label>
                  <span vusion-slot-name="item">节点 1.2.1</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
            <div class="root">
              <div class="item" disabled="disabled" style="padding-left: 60px;" tabindex="0">
                <div class="text" draggable="false" style="margin-left: 30px;">
                  <label class="root" disabled="disabled" show-title="true" tabindex="0">
                    <span class="box" disabled="disabled" status="false"></span>
                    <span vusion-slot-name="item"></span>
                  </label>
                  <span vusion-slot-name="item">节点 1.2.2</span>
                </div>
              </div>
              <div class="sub" style="display: none;">
              </div>
            </div>
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" show-title="true" tabindex="0">
                <span class="box" status="true"></span>
                <span vusion-slot-name="item"></span>
              </label>
              <span vusion-slot-name="item">节点 1.3</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
        <div class="root">
          <div class="item" style="padding-left: 30px;" tabindex="0">
            <div class="text" draggable="false" style="margin-left: 30px;">
              <label class="root" show-title="true" tabindex="0">
                <span class="box" status="true"></span>
                <span vusion-slot-name="item"></span>
              </label>
              <span vusion-slot-name="item">节点 1.4</span>
            </div>
          </div>
          <div class="sub" style="display: none;">
          </div>
        </div>
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <label class="root" show-title="true" tabindex="0">
            <span class="box" status="false"></span>
            <span vusion-slot-name="item"></span>
          </label>
          <span vusion-slot-name="item">节点 2</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
    <div class="root">
      <div class="item" style="padding-left: 0px;" tabindex="0">
        <div class="text" draggable="false" style="margin-left: 30px;">
          <label class="root" show-title="true" tabindex="0">
            <span class="box" status="false"></span>
            <span vusion-slot-name="item"></span>
          </label>
          <span vusion-slot-name="item">节点 3</span>
        </div>
      </div>
      <div class="sub" style="display: none;">
      </div>
    </div>
  </div>
</div>
`;
